[Reupload] Improve initialization and configuration of ItemSettings, add methods for getting raw name and lore from NameAndLore, fix deprecation in ItemBuilder, fix SkinProviders and PoolManager initialization
Also remove all 'var' keywords everywhere