@@ -9,6 +9,8 @@ package me.denarydev.crystal.paper.utils;
 
 import org.bukkit.entity.Player;
 
+import java.util.List;
+
 /**
  * Утилиты для работы с пермишенами.
  */
@@ -22,13 +24,13 @@ public final class PermissionUtils {
      * @return число из пермишена
      */
     public static int numberFromPermission(final Player player, final String permission) {
-        final var values = player.getEffectivePermissions().stream()
+        final List<Integer> values = player.getEffectivePermissions().stream()
             .filter(info -> info.getPermission().startsWith(permission))
             .map(info -> info.getPermission().substring(permission.length()))
             .map(Integer::parseInt)
             .sorted()
             .toList();
 
-        return values.get(values.size() - 1);
+        return values.getLast();
     }
 }
